frontend/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  * {
    @apply font-montserrat text-black;
  }
}

@layer components {
  .section-container {
    @apply flex w-full flex-col gap-y-6;
  }

  .section-title {
    @apply text-center text-4xl font-semibold tracking-wide lg:text-6xl;
  }

  .section-text-xl {
    @apply text-xl font-medium tracking-wide md:text-2xl lg:text-3xl;
  }

  .section-text-lg {
    @apply text-base font-normal md:text-lg lg:text-xl;
  }

  .section-text-base {
    @apply text-sm font-normal md:text-base lg:text-lg;
  }
}

@layer utilities {
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }

  .no-scrollbar {
    -ms-overflow-style: none;
    scrollbar-width: none;
  }
}

